2002-11-20  Chris Blumenberg  <cblu@apple.com>

	Fixed: 3074926 - crash in BitsToPix() trying to print cnet page

        * Plugins.subproj/WebBaseNetscapePluginView.m:
        (-[WebBaseNetscapePluginView drawRect:]): disable experimental plug-in printing code.

2002-11-20  Chris Blumenberg  <cblu@apple.com>

	Minor clean-up, logging and more error checking in plug-in code.

        * Plugins.subproj/WebBaseNetscapePluginStream.m:
        (-[WebBaseNetscapePluginStream setResponse:]):
        (-[WebBaseNetscapePluginStream receivedData:]):
        (-[WebBaseNetscapePluginStream finishedLoadingWithData:]):
        * Plugins.subproj/npapi.m:
        (NPN_UserAgent):
        (NPN_MemFree):
        (NPN_MemFlush):
        (NPN_ReloadPlugins):

2002-11-20  Chris Blumenberg  <cblu@apple.com>
	
	Fixed: 3061174 - javascript: URLs sent by plugins don't work

        * Plugins.subproj/WebBaseNetscapePluginView.m:
        (-[WebBaseNetscapePluginView loadRequest:inTarget:withNotifyData:]):

2002-11-20  Darin Adler  <darin@apple.com>

        * English.lproj/StringsNotToBeLocalized.txt: Update for recent changes.

2002-11-19  Chris Blumenberg  <cblu@apple.com>

	Fixed: 3106061 - REGRESSION: Copy in text view copies all text not just selection

        * Misc.subproj/WebSearchableTextView.m:
        (-[WebSearchableTextView copy:]):

2002-11-19  Chris Blumenberg  <cblu@apple.com>

	Fixed: 3092588 - redraw errors in QT controller if window is in background

	We need to send update events after we activate/deactivate after all.

        * Plugins.subproj/WebBaseNetscapePluginView.m:
        (-[WebBaseNetscapePluginView windowBecameKey:]):
        (-[WebBaseNetscapePluginView windowResignedKey:]):

2002-11-19  Chris Blumenberg  <cblu@apple.com>

	Fixed: 3020720 - dropping a folder in the page address makes the folder open in Finder, empties the field

        * Misc.subproj/WebNSPasteboardExtras.m:
        (-[NSPasteboard _web_bestURL]): Don't accept directories.
